прописала классы в index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 	<header>
-		<label><img src="img/Vector.png" alt="Word of travel"></label>
+		<label class="label"><img src="img/Vector.png" alt="Word of travel"></label>
 		<a href="#"><img src="img/Rectangle 4.2.png"><img src="img/Rectangle 4.2.2.png"><img src="img/Rectangle 4.2.3.png"></a>
-		<nav>
-			<ul>
+		<nav class="nav">
+			<ul class="items">
 				<li><a href="#">Start</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">About</a></li>
@@ -22,23 +22,20 @@
 			</ul>
 		</nav>
 	</header>
-	<div>
-		<img src="img/iswanto-arif-448003-unsplash.png" alt="picture">
-	</div>
-	<div>
+	<div class="title">
 		<h1>bali</h1>
 	</div>
 	<div>
-		<h2>Indonesia</h2>
+		<h2 class="caption">Indonesia</h2>
 	</div>
-	<div>
+	<div class="img">
 		<img src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
 		<img src="img/123.png" alt="picture2">
 		<img src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">
 	</div>
-	<div>
+	<div class="text">
 		<p>Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-		<button>Book travel</button>
+		<button class="btn">Book travel</button>
 	</div>
 </body>
 </html>
