изменила названия классов в index.html и добавила шрифт для ссылки style.css

--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 </head>
 <body>
 	<header>
-		<label class="label"><img src="img/Vector.png" alt="Word of travel"></label>
-		<a href="#"><img src="img/Rectangle 4.2.png"><img src="img/Rectangle 4.2.2.png"><img src="img/Rectangle 4.2.3.png"></a>
-		<nav class="nav">
-			<ul class="items">
-				<li><a href="#">Start</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact us</a></li>
+		<input id="label"><label><img src="img/Vector.png" alt="Word of travel"></label>
+		<div class="burger">
+			<a href="#"></a>
+		</div>
+		<nav class="header__nav">
+			<ul class="header__items">
+				<li class="header__item"><a href="#">Start</a></li>
+				<li class="header__item"><a href="#">Services</a></li>
+				<li class="header__item"><a href="#">About</a></li>
+				<li class="header__item"><a href="#">Blog</a></li>
+				<li class="header__item"><a href="#">Contact us</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div class="title">
-		<h1>bali</h1>
-	</div>
-	<div>
-		<h2 class="caption">Indonesia</h2>
-	</div>
-	<div class="img">
-		<img src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
-		<img src="img/123.png" alt="picture2">
-		<img src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">
-	</div>
-	<div class="text">
-		<p>Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-		<button class="btn">Book travel</button>
-	</div>
+	<main class="main">
+		<h1 class="main__title">bali</h1>
+		<section>
+		<h2 class="main__caption">Indonesia</h2>
+		</section>
+		<section class="main__section_img">
+			<img src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
+			<img src="img/123.png" alt="picture2">
+			<img src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">	
+		</section>
+		<section class="main__section">
+			<p class="main__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
+		<button class="main__btn">Book travel</button>	
+		</section>
+	</main>
 </body>
 </html>
