изменила index.html

--- a/index.html
+++ b/index.html
@@ -9,34 +9,30 @@
 	<title>Bali</title>
 </head>
 <body>
-	<header>
-		<input id="label"><label><img src="img/Vector.png" alt="Word of travel"></label>
-		<div class="burger">
-			<a href="#"></a>
+	<header class="heading">
+		<img class="heading__img" src="img/Vector.png" alt="Word of travel">
+		<div class="heading__burger">
+			<a href="#"><img src="" alt="burger"></a>
 		</div>
-		<nav class="header__nav">
-			<ul class="header__items">
-				<li class="header__item"><a href="#">Start</a></li>
-				<li class="header__item"><a href="#">Services</a></li>
-				<li class="header__item"><a href="#">About</a></li>
-				<li class="header__item"><a href="#">Blog</a></li>
-				<li class="header__item"><a href="#">Contact us</a></li>
+		<nav class="heading__nav">
+			<ul class="heading__items">
+				<li class="heading__item"><a href="#">Start</a></li>
+				<li class="heading__item"><a href="#">Services</a></li>
+				<li class="heading__item"><a href="#">About</a></li>
+				<li class="heading__item"><a href="#">Blog</a></li>
+				<li class="heading__item"><a href="#">Contact us</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main class="main">
-		<h1 class="main__title">bali</h1>
-		<section>
-		<h2 class="main__caption">Indonesia</h2>
-		</section>
-		<section class="main__section_img">
-			<img src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
-			<img src="img/123.png" alt="picture2">
-			<img src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">	
-		</section>
-		<section class="main__section">
-			<p class="main__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-		<button class="main__btn">Book travel</button>	
+		<section class="content">
+			<h1 class="content__title">bali</h1>
+			<h2 class="content__caption">Indonesia</h2>
+			<img class="content__img1" src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
+			<img class="content__img2" src="img/123.png" alt="picture2">
+			<img class="content__img3" src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">	
+			<p class="content__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
+			<button class="content__btn">Book travel</button>	
 		</section>
 	</main>
 </body>
