все поменяла и в index.html и в img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="heading">
-		<img class="heading__img" src="img/Vector.png" alt="Word of travel">
+		<img class="heading__img" src="img/logo.svg" alt="Word of travel">
 		<div class="heading__burger">
 			<a href="#"><img src="" alt="burger"></a>
 		</div>
@@ -28,11 +28,11 @@
 		<section class="content">
 			<h1 class="content__title">bali</h1>
 			<h2 class="content__caption">Indonesia</h2>
-			<img class="content__img1" src="img/aron-visuals-1075065-unsplash.png" alt="picture1">
-			<img class="content__img2" src="img/123.png" alt="picture2">
-			<img class="content__img3" src="img/sebastian-pena-lambarri-1220288-unsplash.png" alt="picture3">	
+			<img class="content__img1" src="img/bali_2.png" alt="picture1">
+			<img class="content__img2" src="img/bali_1.png" alt="picture2">
+			<img class="content__img3" src="img/bali_3.png" alt="picture3">	
 			<p class="content__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-			<button class="content__btn">Book travel</button>	
+			<a class="content__link" href="#">Book travel</a>
 		</section>
 	</main>
 </body>
