исправила названия классов в index.html

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<section class="content">
 			<h1 class="content__title">bali</h1>
 			<h2 class="content__caption">Indonesia</h2>
-			<img class="content__img1" src="img/bali_2.png" alt="picture1">
-			<img class="content__img2" src="img/bali_1.png" alt="picture2">
-			<img class="content__img3" src="img/bali_3.png" alt="picture3">	
+			<img class="content__img" src="img/bali_2.png" alt="picture1">
+			<img class="content__img" src="img/bali_1.png" alt="picture2">
+			<img class="content__img" src="img/bali_3.png" alt="picture3">	
 			<p class="content__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-			<a class="content__link" href="#">Book travel</a>
+			<a class="content__btn" href="#">Book travel</a>
 		</section>
 	</main>
 </body>
