--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="heading">
-		<img class="heading__img" src="img/logo.svg" alt="Word of travel">
+		<img class="heading__logo" src="img/logo.svg" alt="Word of travel">
 		<div class="heading__burger">
 			<a href="#"><img src="" alt="burger"></a>
 		</div>
