--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 	<header class="heading">
-		<img class="heading__logo" src="img/logo.svg" alt="Word of travel">
+		<div class="heading__lable">
+			<a href="/"><img class="heading__logo" src="img/logo.svg" alt="Word of travel"></a>
+		</div>
 		<div class="heading__burger">
 			<a href="#"><img src="" alt="burger"></a>
 		</div>
@@ -28,11 +30,12 @@
 		<section class="content">
 			<h1 class="content__title">bali</h1>
 			<h2 class="content__caption">Indonesia</h2>
-			<img class="content__img" src="img/bali_2.png" alt="picture1">
-			<img class="content__img" src="img/bali_1.png" alt="picture2">
-			<img class="content__img" src="img/bali_3.png" alt="picture3">	
 			<p class="content__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
 			<a class="content__btn" href="#">Book travel</a>
+			<img class="content__img_2" src="img/bali_2.png" alt="picture1">
+			<img class="content__img_1" src="img/bali_1.png" alt="picture2">
+			<img class="content__img_3" src="img/bali_3.png" alt="picture3">	
+			
 		</section>
 	</main>
 </body>
