--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 	</header>
 	<main class="main">
 		<section class="content">
-			<h1 class="content__title">bali</h1>
+			<h1 class="content__title">Bali</h1>
 			<h2 class="content__caption">Indonesia</h2>
 			<p class="content__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
 			<a class="content__btn" href="#">Book travel</a>
-			<img class="content__img_2" src="img/bali_2.png" alt="picture1">
-			<img class="content__img_1" src="img/bali_1.png" alt="picture2">
+			<img class="content__img_2" src="img/bali_2.png" alt="picture2">
+			<img class="content__img_1" src="img/bali_1.png" alt="picture1">
 			<img class="content__img_3" src="img/bali_3.png" alt="picture3">	
-			
 		</section>
 	</main>
 </body>
 </html>
+
