изменила index.html и style.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			<a href="/"><img class="heading__logo" src="img/logo.svg" alt="Word of travel"></a>
 		</div>
 		<div class="heading__burger">
-			<a href="#"><img src="" alt="burger"></a>
+			<!--<div class="heading__line"></div>
+			<div class="heading__line"></div>
+			<div class="heading__line"></div>-->
 		</div>
 		<nav class="heading__nav">
 			<ul class="heading__items">
@@ -35,9 +37,9 @@
 				<a class="content__btn" href="#">Book travel</a>
 			</div>
 			<div class="content__img">
-				<img class="content__img_1" src="img/bali_2.png" alt="picture2">
-				<img class="content__img_2" src="img/bali_1.png" alt="picture1">
-				<img class="content__img_3" src="img/bali_3.png" alt="picture3">
+				<img class="content__img_first" src="img/bali_2.png" alt="picture2">
+				<img class="content__img_second" src="img/bali_1.png" alt="picture1">
+				<img class="content__img_third" src="img/bali_3.png" alt="picture3">
 			</div>	
 		</section>
 	</main>
