--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="heading__lable">
 			<a href="/"><img class="heading__logo" src="img/logo.svg" alt="Word of travel"></a>
 		</div>
-		<div class="heading__burger">
+		<div class="heading__burger heading__burger_active">
 			<!--<div class="heading__line"></div>
 			<div class="heading__line"></div>
 			<div class="heading__line"></div>-->
