заменила все опять

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 		<div class="heading__lable">
 			<a href="/"><img class="heading__logo" src="img/logo.svg" alt="Word of travel"></a>
 		</div>
-		<div class="heading__burger heading__burger_active">
-			<!--<div class="heading__line"></div>
-			<div class="heading__line"></div>
-			<div class="heading__line"></div>-->
+		<div class="heading__icon">
+			<div class="heading__burger heading__burger_active">
+		</div>	
 		</div>
 		<nav class="heading__nav">
 			<ul class="heading__items">
@@ -37,9 +36,9 @@
 				<a class="content__btn" href="#">Book travel</a>
 			</div>
 			<div class="content__img">
-				<img class="content__img_first" src="img/bali_2.png" alt="picture2">
-				<img class="content__img_second" src="img/bali_1.png" alt="picture1">
-				<img class="content__img_third" src="img/bali_3.png" alt="picture3">
+				<img class="content__img1" src="img/bali_2.png" alt="picture2">
+				<img class="content__img2" src="img/bali_1.png" alt="picture1">
+				<img class="content__img3" src="img/bali_3.png" alt="picture3">
 			</div>	
 		</section>
 	</main>
